[FIX] mail: sync navbar buttons and navbar background in dark mode
The background color of navbar buttons in discuss app differed from that of
navbar causing inconsistency.

This commit aligns and syncs these colors for a consistent UI.
This is backport of #217608.

task-4936733

X-original-commit: 467b74152cd3b4a4101b58c189b261ee6ebec35d
Part-of: odoo/odoo#251319

--- a/addons/mail/static/src/core/public_web/discuss.dark.scss
+++ b/addons/mail/static/src/core/public_web/discuss.dark.scss
@@ -16,12 +16,10 @@
 }
 
 .o_web_client:has(.o-mail-Discuss) {
+    --mail-Discuss-surface-dark: #{mix($white, $o-webclient-background-color, 15%)};
+    --NavBar-entry-backgroundColor: var(--mail-Discuss-surface-dark);
 
-    .o_main_navbar {
-        background-color: mix($white, $o-webclient-background-color, 15%);
-    }
-
-    .o_control_panel {
-        background-color: mix($white, $o-webclient-background-color, 15%);
+    .o_main_navbar, .o_control_panel {
+        background-color: var(--mail-Discuss-surface-dark);
     }
 }
